Added bigquery abstractions; project specific environment variables; bq_load_books_data.py will load the BOOKS data

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,6 @@
 # Environment Variables, like API keys and stuff go here.
+
+# Environment Variables relating to the Flask + Vue Sample Books Application
+BQ_BOOKS_PROJECT='projecthindsight-269723'
+BQ_BOOKS_DATASET='books'
+BQ_BOOKS_TABLE='book_data'
