--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["Daniel Le <ledanieln@gmail.com>"]
 python = "^3.8"
 Flask = "1.0.2"
 Flask-Cors = "3.0.7"
+google-cloud-bigquery = "^1.24.0"
+python-dotenv = "^0.12.0"
 
 [tool.poetry.dev-dependencies]
 
